# mockchain

./: README.md  mockchain.cabal
src/Mockchain/: API.hs  Server.hs  Transaction.hs
src/Mockchain/API/: Errors.hs
test/: Main.hs
